objects/Launch__c.object
<CustomObject>
    <fields>
        <fullName>Data_Ops_Notes__c</fullName>
        <label>Data Ops Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Data_Ops_Open_Status__c</fullName>
        <description>Simplifies data ops status to Open or Closed.</description>
        <formula>IF(
OR(
ISPICKVAL(Data_Ops_Status__c, &quot;Data Ops Complete&quot;),
ISPICKVAL(Data_Ops_Status__c, &quot;Data Not Received&quot;),
CONTAINS(TEXT(Data_Ops_Status__c), &quot;N/A&quot;)
), &quot;Closed&quot;, &quot;Open&quot;)</formula>
        <label>Data Ops Open Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Ops_ReSubmit_Date__c</fullName>
        <inlineHelpText>Enter a date to notify Data Ops that more work may be needed.</inlineHelpText>
        <label>Data Ops ReSubmit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Ops_Specialist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Data Ops Specialist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Launch3DataOpsSpecialist</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Data_Ops_Status__c</fullName>
        <label>Data Ops Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>With Integralink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for Data Ops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>With Data Ops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Issue with Integralink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Issue Sent to Order Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Ops Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Not Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A - Existing Email Marketing Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A - No Data Ops Needed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Data_Upload__c</fullName>
        <label>Data Upload</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dealer_Approval_to_Go_Live__c</fullName>
        <label>Dealer Approval to Go Live</label>
        <picklist>
            <picklistValues>
                <fullName>Approval Attached</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Engagement - Notification of Go Live Sent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dealer_Blocking__c</fullName>
        <label>Dealer Blocking</label>
        <picklist>
            <picklistValues>
                <fullName>Not Engaged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dealer_Closed_Order_in_Oracle__c</fullName>
        <label>Dealer Closed Order in Oracle</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dealer_Code_BAC__c</fullName>
        <label>Dealer Code/BAC</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Group_Name__c</fullName>
        <formula>Account__r.Dealer_Group_Name2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer Group Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Group_Support__c</fullName>
        <formula>WebID__r.Dealer_Group_Support_Customer__c</formula>
        <inlineHelpText>This dealership uses Dealer Group Support and has a special 800 number for support issues.</inlineHelpText>
        <label>Dealer Group Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dealer_Name_for_Banner__c</fullName>
        <inlineHelpText>Please enter the name the Dealer would like to have on their banner.</inlineHelpText>
        <label>Dealer Name for Banner</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dealer_Setup_in_Integralink__c</fullName>
        <label>Dealer Setup in Integralink</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dealer_Setup_in_OnStation__c</fullName>
        <label>Dealer Setup in OnStation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Design_Age__c</fullName>
        <formula>IF( ISNULL( Design_Assign_Date__c ) , NULL,
IF( ISNULL( Design_Completion_Date__c ) , NOW() -Design_Assign_Date__c , Design_Completion_Date__c -Design_Assign_Date__c ))</formula>
        <inlineHelpText>Current age of Design section from assignment to now or assignment to completion.</inlineHelpText>
        <label>Design Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Design_Appeal_Difficulty_Notes__c</fullName>
        <label>Design Appeal/Difficulty Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Design_Appeal_Difficulty_Score__c</fullName>
        <label>Design Appeal/Difficulty Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Design_Assign_Date__c</fullName>
        <inlineHelpText>Date/Time Stamp for when the Design Specialist was first assigned to this Launch record.</inlineHelpText>
        <label>Design Assign Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Design_Completion_Date__c</fullName>
        <inlineHelpText>Date/Time Stamp for when the Design Status was set to Complete the last time.</inlineHelpText>
        <label>Design Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Design_Notes__c</fullName>
        <label>Design Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Design_Open_Status__c</fullName>
        <description>Simplifies Design Status to open or closed.</description>
        <formula>IF(
OR(
ISPICKVAL( Design_Status__c , &quot;Design Complete&quot;),
CONTAINS(TEXT( Design_Status__c) , &quot;N/A &quot;)
),&quot;Closed&quot;, &quot;Open&quot;)</formula>
        <label>Design Open Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Design_Specialist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Design Specialist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Launch3Design</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Design_Status__c</fullName>
        <label>Design Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>With Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A - Relaunch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A - No Design Needed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Discount_Approvals__c</fullName>
        <label>Discount Approvals?</label>
        <picklist>
            <picklistValues>
                <fullName>No Discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discount Recalculated &amp; Approval Attached</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Do_Not_Send_Onboarding__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used by a workflow as a work around to issues with multi-select picklists.</description>
        <label>Do Not Send Onboarding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Domain_Age__c</fullName>
        <formula>IF( ISNULL(Domain_Assign_Date__c) , NULL,
      IF(  ISNULL( Domain_Completion_Date__c ) ,  NOW() -Domain_Assign_Date__c, Domain_Completion_Date__c -Domain_Assign_Date__c))</formula>
        <inlineHelpText>Current age of Domain section from assignment to now or assignment to completion.</inlineHelpText>
        <label>Domain Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Domain_Assign_Date__c</fullName>
        <inlineHelpText>Date/Time Stamp for when the Domains Specialist was first assigned to this Launch record.</inlineHelpText>
        <label>Domain Assign Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Domain_Completion_Date2__c</fullName>
        <formula>Domain_Completion_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Domain Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Domain_Completion_Date__c</fullName>
        <inlineHelpText>Date/Time Stamp for when the Domains Status was set to Complete the last time.</inlineHelpText>
        <label>Domain Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Domain_Name__c</fullName>
        <label>Domain Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domain_Notes__c</fullName>
        <label>Domain Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Domain_Open_Status__c</fullName>
        <description>shows only closed or open depending on domain status field.</description>
        <formula>IF (
OR(
ISPickval( Domain_Status__c ,&quot;Domains Complete&quot;),
ISPickval( Domain_Status__c ,&quot;N/A - No Domains Needed&quot;)
),
&quot;Closed&quot;, &quot;Open&quot;)</formula>
        <label>Domain Open Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domain_ReSubmit_Date__c</fullName>
        <inlineHelpText>If Domain Status is set to &quot;Domains Complete,&quot; enter date to put record back in Domain Queue.</inlineHelpText>
        <label>Domain ReSubmit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Domain_Request_Submit_Date__c</fullName>
        <inlineHelpText>Date/Time Stamp for when the Domain work request was submitted to the Domains team.</inlineHelpText>
        <label>Domain Request Submit Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Domain_Request_Submitted__c</fullName>
        <inlineHelpText>When order is ready for Domains team to become involved fill in todays date. This will set the Status to &quot;Ready for Domains&quot; and put the record into their queue.</inlineHelpText>
        <label>Domain Request Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Domain_Specialist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Domain Specialist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Launch3DomainSpecialist</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Domain_Status__c</fullName>
        <label>Domain Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for Domains</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>With Domains</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Issue Sent to Order Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domains Acquired - Waiting on URL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domains Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A - No Domains Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A - Dealer Written Attached DIT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Domain_Transfer__c</fullName>
        <defaultValue>&quot;We need either:&quot;&amp; BR()  &amp; 
&quot;Registrar:&quot; &amp; BR()  &amp; 
&quot;Username:&quot; &amp; BR()  &amp;  
&quot;Password:&quot; &amp; BR()  &amp; 
&quot;OR&quot;&amp; BR()  &amp;  
&quot;Authorization Code:&quot;&amp; BR()  &amp;  
&quot;Once we transfer the domain, does the dealer want this set up as the primary?&quot;</defaultValue>
        <inlineHelpText>Please fill out this template if the domain is being transferred.</inlineHelpText>
        <label>Domain Transfer</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EMS_Email__c</fullName>
        <description>This field is updated by a workflow with the Email Marketing Specialist email from the WebId object.</description>
        <label>EMS Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Marketing_Specialist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Email Marketing Specialist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Launch</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_Set_Ups__c</fullName>
        <defaultValue>&quot;User Id (this is used to log into their webmail admin account):&quot;&amp; BR() &amp; 
&quot;Password (this is the pw to log into their webmail account):&quot;&amp; BR() &amp; 
&quot;Alternate email address (yahoo, msn, gmail):&quot;&amp;BR()&amp; 
&quot;Mobile Sync (Y/N):&quot;&amp;BR()&amp; 
&quot;Mobile Sync Emails to Configure:&quot;</defaultValue>
        <inlineHelpText>Please fill out this template if email needs to be established.</inlineHelpText>
        <label>Email Set Ups</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Facebook_URL__c</fullName>
        <inlineHelpText>Please enter the Dealer&apos;s Facebook URL. If they do not have one, please enter &quot;does not have.&quot;</inlineHelpText>
        <label>Facebook URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GAM_Email__c</fullName>
        <description>This email is updated by a workflow with the GAM email from the Account object. Do not display on page layout - this is intended for workflows.</description>
        <label>GAM Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>General_Build_Notes__c</fullName>
        <inlineHelpText>Please use this section if you have Build notes that do not fit under other QA categories.</inlineHelpText>
        <label>General Build Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Graphics_Folder_Source_Files_Notes__c</fullName>
        <label>Graphics Folder/Source Files Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Graphics_Folder_Source_Files_Score__c</fullName>
        <label>Graphics Folder/Source Files Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hold_Notes__c</fullName>
        <label>Hold Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Hold_Reason__c</fullName>
        <inlineHelpText>Please choose a reason for placing the launch on hold.</inlineHelpText>
        <label>Hold Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Bug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract at Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Check Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data/Conversions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expectations/Requirement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inventory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Cancellation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Survey Questions</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IO_Attached__c</fullName>
        <label>I/O Attached</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IO_Complete__c</fullName>
        <label>I/O Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IO_Number__c</fullName>
        <label>I/O Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_No_MDA_Why__c</fullName>
        <label>If No MDA, Why?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_No_Order_Form_Why__c</fullName>
        <label>If No Order Form, Why?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Inventory_Age__c</fullName>
        <formula>IF( ISNULL( Inventory_Assign_Date__c ) , NULL,
IF( ISNULL( Inventory_Completion_Date__c  ) , NOW() -Inventory_Assign_Date__c  , Inventory_Completion_Date__c -Inventory_Assign_Date__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Current age of Inventory section from assignment to now or assignment to completion.</inlineHelpText>
        <label>Inventory Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inventory_Assign_Date__c</fullName>
        <inlineHelpText>Date/Time Stamp for when the Inventory was first assigned to this Launch record.</inlineHelpText>
        <label>Inventory Assign Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Inventory_Completion_Date2__c</fullName>
        <formula>Inventory_Completion_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inventory Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inventory_Completion_Date__c</fullName>
        <inlineHelpText>Date/Time Stamp for when the Inventory Status was set to Complete the last time.</inlineHelpText>
        <label>Inventory Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Inventory_Contact_Email__c</fullName>
        <formula>Inventory_Contact_Name__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inventory Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inventory_Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Launch (Inventory Contact Name)</relationshipLabel>
        <relationshipName>Launch1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inventory_Contact_Phone__c</fullName>
        <formula>Inventory_Contact_Name__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inventory Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inventory_Notes__c</fullName>
        <label>Inventory Notes</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Inventory_Open_Status__c</fullName>
        <description>This field is used to summarize the Inventory status so you can easily see if the inventory status is in an open or closed state.  This should be used in validation rules and workflow rules as needed.</description>
        <formula>IF( 
OR( 
ISPICKVAL(  Inventory_Status__c , &quot;Inventory Complete&quot;), 
CONTAINS(TEXT( Inventory_Status__c ) , &quot;N/A &quot;) 
),&quot;Closed&quot;, &quot;Open&quot;)</formula>
        <label>Inventory Open Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inventory_QA_Completed__c</fullName>
        <label>Inventory QA Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inventory_ReSubmit_Date__c</fullName>
        <inlineHelpText>Enter a date to notify Inventory that more work may be needed if the Inventory Status is set to &quot;Inventory Complete.&quot;</inlineHelpText>
        <label>Inventory ReSubmit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inventory_Request_Submit_Date__c</fullName>
        <inlineHelpText>Date/Time Stamp for when the Inventory work request was submitted to the Inventory team.</inlineHelpText>
        <label>Inventory Request Submit Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Inventory_Request_Submitted__c</fullName>
        <inlineHelpText>When order is ready for Inventory to become involved fill in today&apos;s date. This will set the Status to &quot;Ready for Inventory&quot; and put the record into their queue.</inlineHelpText>
        <label>Inventory Request Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inventory_Specialist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory Specialist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Launch8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inventory_Status__c</fullName>
        <label>Inventory Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for Inventory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>With Inventory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inventory Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Issue Sent to Order Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inventory Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A - Dealer Written Attached</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A - No Inventory Needed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_this_website_live__c</fullName>
        <label>Is this website live?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LMA_Analyst2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LMA Analyst 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>LaunchsxFz</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LMA_Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LMA Analyst</label>
        <referenceTo>User</referenceTo>
        <relationshipName>LaunchsdJD</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LMA_Closed_Order_in_Oracle__c</fullName>
        <label>LMA Closed Order in Oracle</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LMA_Code__c</fullName>
        <formula>Account__r.LMA_Code__c</formula>
        <label>LMA Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LMA_Logo_Attached__c</fullName>
        <label>LMA Logo Attached</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LMA_Logo_Name__c</fullName>
        <label>LMA Logo Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LMA_Monthly_Budget__c</fullName>
        <label>LMA Monthly Budget</label>
        <summarizedField>Launch_Product__c.Monthly_Budget__c</summarizedField>
        <summaryForeignKey>Launch_Product__c.LaunchID__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LMA_QA_Complete__c</fullName>
        <label>QA Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LMA_Strategist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LMA Strategist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>LaunchQZ5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LMA_Super_Group__c</fullName>
        <label>LMA Super Group</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LMA_Total_Budget__c</fullName>
        <label>LMA Total Budget</label>
        <summarizedField>Launch_Product__c.Total_Budget__c</summarizedField>
        <summaryForeignKey>Launch_Product__c.LaunchID__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dual</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Launch_Age__c</fullName>
        <description>In calendar days</description>
        <formula>IF(  ISNULL(Closed_Date__c ),   NOW() - CreatedDate ,   Closed_Date__c - CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows calendar day age of launch record.</inlineHelpText>
        <label>Launch Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Launch_Comments__c</fullName>
        <label>Special Instructions</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Launch_Health__c</fullName>
        <inlineHelpText>This represents how the dealer felt during fulfillment.  
Red - dealer frustrated Yellow - no critical issues Green - positive experience</inlineHelpText>
        <label>Launch Health</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Routing_Form_QA_Completed__c</fullName>
        <label>Lead Routing Form QA Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Link_to_Customer_Folder_Info__c</fullName>
        <label>Link to Customer Folder/Info</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Link_to_Website__c</fullName>
        <label>Link to Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Locale__c</fullName>
        <formula>WebID__r.Locale__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Locale</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDA__c</fullName>
        <inlineHelpText>&quot;Attached&quot; refers to the standard MDA.  The &quot;DAP MDA&quot; refers to the abbreviated product version posted on the Online Order System.</inlineHelpText>
        <label>MDA Attached or On FIle</label>
        <picklist>
            <picklistValues>
                <fullName>Attached</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAP MDA Attached</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On File</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Needed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Maintenance_Repair_Budget__c</fullName>
        <inlineHelpText>Please Enter the Maintenance &amp; Repair Budget OR N/A in this field.</inlineHelpText>
        <label>Maintenance &amp; Repair Budget</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Strategist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Marketing Strategist (was CAM - Client Account Manager in other objects)</description>
        <label>Marketing Strategist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>LaunchAEB5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Model_Focus__c</fullName>
        <description>model focus for AMP</description>
        <label>Model Focus</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Monthly_Recurring_Total__c</fullName>
        <label>Monthly Recurring Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Domain_Setups__c</fullName>
        <defaultValue>&quot;Is the domain going to be setup on the Cobalt DNS?&quot; &amp; BR()  &amp; 
&quot;If Yes, are we going to host email? (Fill out email setups if Yes)&quot; &amp; BR()  &amp;
&quot;If no, please provide MX records:&quot;</defaultValue>
        <inlineHelpText>Please fill out this template if new domain setup is needed.</inlineHelpText>
        <label>New Domain Setups</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>New_Flex_Budget__c</fullName>
        <label>New Flex Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Import_or_Export_3rd_Party__c</fullName>
        <defaultValue>&quot;3rd Party Export or Import Vendor Name:&quot; &amp;BR()&amp;
&quot;If import - Type of inventory requested: (New, Used, Both)&quot; &amp;BR()&amp;
&quot;Dealer Account #: (if vendor requires Cars.com, Autotrader, DMI, etc.)&quot;</defaultValue>
        <inlineHelpText>Please fill out this template if the dealership is using a 3rd party for inventory.</inlineHelpText>
        <label>New Import or Export 3rd Party</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>New_Import_or_Export_Vendor__c</fullName>
        <defaultValue>&quot;Please Provide Vendor Information:&quot;&amp; BR() &amp; 
&quot;Vendor Name:&quot;&amp; BR() &amp; 
&quot;Vendor Contact Name:&quot;&amp; BR() &amp; 
&quot;Vendor Contact Phone:&quot;&amp; BR() &amp; 
&quot;Vendor Contact Email:&quot;&amp; BR() &amp; 
&quot;Company URL:&quot;&amp; BR() &amp; 
&quot;Notes:&quot;</defaultValue>
        <inlineHelpText>Please fill out this template if the dealership is using an import or export feed for inventory.</inlineHelpText>
        <label>New Import or Export Vendor</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Nitra_Password__c</fullName>
        <label>Nitra Password</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Nitra_Username__c</fullName>
        <label>Nitra Username</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>No_of_Dealers_in_LMA__c</fullName>
        <label># of Dealers in LMA</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notice_to_Book_Order_Recd_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Notification to Book Order Received and Attached</inlineHelpText>
        <label>Notice to Book Order Rec&apos;d &amp; Attached</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>